# ChangeLog

0.8.0alpha2
    * Fix active tool not re-setting to None when told to
    * Use printer mid-movement power panic recovery trick

0.8.0alpha1
    * Stop showing the tune menu after connecting to the printer
    * Use the 2023-10-10 Raspberry Pi OS base image for the image builder
    * Decrease the severity of web server access log messages
    * Add a way to download logs even on systemd journal based systems
    * Bump the API version so it is the same as the xBuddy reported one
    * Support the new multi-level telemetry data structure
    * Don't send over serial when temperature calibration is running
    * Periodically send a keepalive gcode to keep the printer in PrusaLink mode
    * Support the set ready and cancel ready LCD menu toggle
    * Add gcodes that flag the state of a usb print for the printer statistics to get saved
    * Handle the new re-print LCD menu item
    * Add the initial support for the MMU
    * Add Power Panic support
    * Make ->Ready to recover dissapear sooner from the LCD
    * The minimum firmwre version has been increased to 3.14.0
    * Fix the multi-instance proxy

0.7.2 (2023-10-11)
    * Add an automatic PrusaLink image builder script
    * Add multi-instance documentation
    * Telemetry improvement
    * Attempt to turn the RPi wifi power management off in the images

0.7.1rc1 (2023-08-10)
    * Fixed HTTP response status on HEAD request for non-existing files
    * Attribute ro renamed to read_only
    * Fix printer returning to READY instead of IDLE
    * Respect the X-Forwarded-Prefix header in Wizard
    * Add focus support for the v4l2 cameras
    * Add a multi-instance web waypoint, use a reverse proxy to navigate to the correct instances
    * Automatically redirect from the multi-instance waypoint if exactly one printer is configured
    * Fix missing error detail pages
    * Fix an error when dosconnecting from a cammera that failed to connect